# Farm-Order-Management-System-API

./: .env.example  .gitignore  API_DOCUMENTATION.md  README.md  SETUP_COMPLETE.md  alembic.ini  check_tables.py  cls  drop_temp_table.py  inspect_constraints.py  pyproject.toml  start-dev.ps1  test_api.py  test_new_tool.py  test_optimization.py  test_refined_workflow.py  verification_result.txt  verify_imports.py  verify_inventory_sync.py  verify_refactor.py
.github/: copilot-instructions.md
ai_agent/: README.md  agents.py  tools.py
alembic/: env.py  script.py.mako
alembic/versions/: 086b6fba34b9_weight_collection_added.py  0a530aef8447_added_foreign_to_animal_event_table.py  0b05fe1d3572_add_purchase_date_to_animals.py  0bfa2c575ba4_event_total_price_added.py  1cef25474658_make_customer_email_and_phone_unique.py  2382aabd9e76_milk_collection_table_added_e.py  282ae4a50a36_milk_collection_table_added.py  28f062286d7b_fields_added_to_material_table.py  357e49f7cdcc_master_animal_table.py  3584f10afce2_inventory_purchasse_table_added.py  3c7cd980e481_created_by_added.py  3d1efdbe9fe5_fields_added_to_material_table.py  48572dc17c2d_updated_at_changes_on_29_nov_2025_1030am.py  4c96b916d54a_master_animal_table.py  5826a03d0754_master_animal_table.py  5917932b2449_init_multi_db.py  __init__.py  (+19 more)
app/: config.py  db.py  main.py  run_script.py
backups/: farmai_backup.sql
scripts/: debug_create_order.py  migrate_tracking_data.py  verify_db_setup.py
tests/: conftest.py  test_graphql_milk_analytics.py  test_graphql_period.py  test_health.py  test_milk.py
(+58 files in other folders)
